--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mobx": "^6.3.9",
     "mobx-react-lite": "^3.2.2",
     "react": "^17.0.2",
+    "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
